<resources>
    <string name="app_name">Ratco MS</string>
    <string name="hr">HR</string>
    <string name="startworkDay">Start Work</string>
    <string name="addMyWorkLocation">Add My Work Location</string>
    <string name="addMyWorkLocationForYourEmployees">Add Work Location For Your Employees</string>
    <string name="sales">Sales</string>
    <string name="service">Service</string>
    <string name="projects">Projects</string>
    <string name="store">WareHouse</string>
    <string name="request_vacation">Vacations</string>
    <string name="backtowork">Back To Work</string>
    <string name="resignation">Resignation</string>
    <string name="advancePayment">Advance Payment</string>
    <string name="requestDesirvedPayment">Request Deserved Payment</string>
    <string name="manageEmployeesContracts">Manage Employees Contracts</string>
    <string name="manageEmployeesPassports">Manage Employees Passports</string>
    <string name="manageEmployeesIds">Manage Employees Ids</string>
    <string name="resignationٍReason">Resignation Reason</string>
    <string name="resignationٍDate">Resignation Date</string>
    <string name="ResignationsendDate">Resignation Send Date</string>
    <string name="sendResignation">Send Resignation</string>
    <string name="accuracy">Accuracy</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="order">Order</string>
    <string name="sendDate">Send Date</string>
    <string name="directManager">Direct Manager</string>
    <string name="date">Date</string>
    <string name="GeneralManager">General Manager</string>
    <string name="doneOrders">Done Orders</string>
    <string name="UndoneOrders">UnDone Orders</string>
    <string name="approved">Approved</string>
    <string name="rejected">Rejected</string>
    <string name="pending">Pending</string>
    <string name="myOrders">My Orders</string>
    <string name="myApprovals">My Approvals</string>
    <string name="jobNumber">Job Number</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="jobTitle">Job Title</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="confermByPassword">Conferm By Password</string>
    <string name="idExpireDate">ID Expire Date</string>
    <string name="idNumber">ID Number</string>
    <string name="passportNumber">Passport Number</string>
    <string name="passportExpireDate">Passport Expire Date</string>
    <string name="contractNumber">Contract Number</string>
    <string name="contractExpireDate">Contract Expire Date</string>
    <string name="department">Department</string>
    <string name="mobile">Mobile Number</string>
    <string name="email">Email</string>
    <string name="AnnualVacation">Annual</string>
    <string name="EmergencyVacation">Emergency</string>
    <string name="SickVacation">Sick</string>
    <string name="startDate">Start Date</string>
    <string name="EndDate">End Date</string>
    <string name="NumberOfDays">Number Of Days</string>
    <string name="alternativeEmp">Alternative Employee</string>
    <string name="vacationLocation">Vacation Location</string>
    <string name="send">Send</string>
    <string name="notes">Notes</string>
    <string name="vacation">Vacation</string>
    <string name="local">Local</string>
    <string name="abroad">Abroad</string>
    <string name="vacationBalance">Vacation Balance</string>
    <string name="attachFile">Attach File</string>
    <string name="cam">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="vacationStart">Leave Start</string>
    <string name="vacationDays">Days</string>
    <string name="vacationType">Leave Type</string>
    <string name="name">Name</string>
    <string name="dateofback">Date Of Back</string>
    <string name="vacationEndDate">Vacation End Date</string>
    <string name="amount">Amount</string>
    <string name="requestReason">Reason</string>
    <string name="monthlyinstallment">Monthly Installment</string>
    <string name="vacationSalary">Vacation Salary</string>
    <string name="selectVacation">Select Vacation</string>
    <string name="ads">Announcement</string>
    <string name="sendNewAd">Send New AD</string>
    <string name="adTitle">AD Title</string>
    <string name="adMessage">AD Message</string>
    <string name="warnings">Warnings</string>
    <string name="enterNewDate">Enter New Date</string>
    <string name="approval1">Approval 1</string>
    <string name="approval2">Approval 2</string>
    <string name="approval3">Approval 3</string>
    <string name="approval4">Approval 4</string>
    <string name="approval5">Approval 5</string>
    <string name="approval6">Approval 6</string>
    <string name="approval7">Approval 7</string>
    <string name="approval8">Approval 8</string>
    <string name="approval9">Approval 9</string>
    <string name="approval10">Approval 10</string>
    <string name="approvalResult">Result</string>
    <string name="approvalDate">Date</string>
    <string name="ManageOrdersAuthorities">Manage Orders Authorities</string>
    <string name="addAuthority">Add Authority</string>
    <string name="manageAuthorizedJobTitles">Manage Authorized JobTitles</string>
    <string name="selectJobtitle">Select Jobtitle</string>
    <string name="authoritiesSaved">Authorities Saved</string>
    <string name="manageProjectEmms">Manage Project Employees</string>
    <string name="manageStaffAttendanceByLocation">Manage Staff Attendance By Location</string>
    <string name="add">Add</string>
    <string name="addEmp">Add Employee</string>
    <string name="saved">Saved</string>
    <string name="selectLocation">Select Location</string>
    <string name="checkEmpsAttendance">Check Employees Attendance</string>
    <string name="showOnMap">Show On Map</string>
    <string name="requestCustody">Request Custody</string>
    <string name="custodyAmount">Custody Amount</string>
    <string name="myNotes">My Notes</string>
    <string name="clientVisitReport">Client Visit Report</string>
    <string name="addNewClientVisitReport">Add Client Visit Report</string>
    <string name="showMyVisitReports">My Visit Reports</string>
    <string name="newClient">New Client</string>
    <string name="oldClient">Old Client</string>
    <string name="clientName">Client Name</string>
    <string name="city">City</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="fieldOfWork">Field Of Work</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="searchBy">Search By</string>
    <string name="searchWord">Search Field</string>
    <string name="searchResult">Search Result</string>
    <string name="select">Select</string>
    <string name="responsibleName">Responsible Name</string>
    <string name="responsibleJobTitle">Responsible JobTitle</string>
    <string name="responsibleMobile">Responsible Mobile</string>
    <string name="companyInformation">Company/Est Information</string>
    <string name="responsibleInformation">Responsible Information</string>
    <string name="selectProject">Select Project</string>
    <string name="projectDescription">Project Description</string>
    <string name="visitDetails">Visit Details</string>
    <string name="searchByDate">Search By Date</string>
    <string name="searchByClient">Search By Client</string>
    <string name="selectDate">Select Date</string>
    <string name="attachFilee">Add Document Photo</string>
    <string name="attachBusinessCard">Add Business Card</string>
    <string name="viewVisit">View My Visit</string>
    <string name="changeMyPassword">Change My Password</string>
    <string name="enterOldPassword">Enter Old Password</string>
    <string name="enterNewPassword">Enter New Password</string>
    <string name="reEnterNewPassword">ReEnter New Password</string>
    <string name="addNewClient">Add New Client</string>
    <string name="viewCard">View Card</string>
    <string name="addClientPhoto">Add Client Photo</string>
    <string name="addQuotationPhoto">Add Quotation Photo</string>
    <string name="salaryReportCreated">Salary Report Created</string>
    <string name="selectMonth">Select Month</string>
    <string name="sendNewAdWithImage">Send New Ad With Image</string>
    <string name="viewMyStaffVisitReports">View My Staff Visits Report</string>
    <string name="selectEmp">Select Employee</string>
    <string name="searchByAllClients">Search All Clients</string>
    <string name="search">Search</string>
    <string name="addNewProjectContract">Add New Project Contract</string>
    <string name="projectName">Project Name</string>
    <string name="projectDesc">Project Description</string>
    <string name="projectResponsible">Project Responsible</string>
    <string name="projectResponsibleMobile">Responsible Mobile</string>
    <string name="contractImage">Contract File</string>
    <string name="enterAddress">Enter Address</string>
    <string name="enterAvaliability">Enter Avaliability (DAY)</string>
    <string name="avaliability">Availability</string>
    <string name="termsAndConditions">Terms And Conditions</string>
    <string name="deliveryLocation">Delivery Location</string>
    <string name="payment">Payment</string>
    <string name="installation">Installation</string>
    <string name="warranty">Warranty</string>
    <string name="items">Items</string>
    <string name="projectLocation">Project Location</string>
    <string name="currentLocation">Current Location</string>
    <string name="otherLocation">Other Location</string>
    <string name="addNewItem">Add New Item</string>
    <string name="enterItemName">Enter ItemName</string>
    <string name="enterQuantity">Enter Quantity</string>
    <string name="enterPrice">Enter Price</string>
    <string name="viewMyProjectContracts">My Project Contracts</string>
    <string name="contract">Contract</string>
    <string name="viewContract">View Contract</string>
    <string name="contractDate">Contract Date</string>
    <string name="supply">Supply</string>
    <string name="supplyDate">Supply Date</string>
    <string name="installDate">Install Date</string>
    <string name="handoverDate">Handover Date</string>
    <string name="supplied">Supplied</string>
    <string name="installed">Installed</string>
    <string name="handovered">Handovered</string>
    <string name="install">Install</string>
    <string name="handover">Handover</string>
    <string name="quantity">Quantity</string>
    <string name="pictures">Pictures</string>
    <string name="orderResponse">Order Response</string>
    <string name="sparePartsStatus">Spare Parts Status</string>
    <string name="spareParts">Spare Parts</string>
    <string name="done">Done</string>
    <string name="undone">UnDone</string>
    <string name="modifySitePhoto">Modify Site Pic</string>
    <string name="modifyQuotationPhoto">Modify Quotattion Pic</string>
    <string name="interested">Interested</string>
    <string name="unInterested">Un Interested</string>
    <string name="visitResult">Visit Result</string>
    <string name="addFile">add file</string>
    <string name="setUsersPermissions">Set Users Permissions</string>
    <string name="salesMan">Sales Man</string>
    <string name="labour">Labour</string>
    <string name="technician">Technician</string>
    <string name="checkAll">Check All</string>
    <string name="uncheckAll">UnCheck All</string>
    <string name="modelNumber">Model Number</string>
    <string name="itemName">Item Name</string>
    <string name="enterSearchWord">enter search word</string>
    <string name="giveBonus">Give Bonus</string>
    <string name="employeeOfTheMonth">Employee Of The Month</string>
    <string name="publishAnnouncement">Publish Announcement</string>
    <string name="announcementText">Announcement Text</string>
</resources>