<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/textView137"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/employeeOfTheMonth"
        android:textColor="@color/purple_700"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView138"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="TextView"
        android:textColor="@color/teal_700" />

    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingStart="10dp"
        android:text="@string/giveBonus"
        android:textAllCaps="false"
        android:textColor="@color/purple_700" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="Amount"
        android:inputType="number"
        android:textColorHint="@color/gray" />

    <CheckBox
        android:id="@+id/checkBox7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingStart="10dp"
        android:text="@string/publishAnnouncement"
        android:textAllCaps="false"
        android:textColor="@color/purple_700" />

    <EditText
        android:id="@+id/editTextTextMultiLine3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/announcementText"
        android:inputType="textMultiLine"
        android:textColorHint="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button61"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:layout_weight="1"
            android:background="@drawable/mainpage_btns"
            android:text="@string/cancel"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/button62"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_weight="1"
            android:background="@drawable/btns"
            android:text="@string/save"
            android:textAllCaps="false" />
    </LinearLayout>
</LinearLayout>