<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:background="@drawable/btns_background"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/orderResponse"
        android:textColor="@color/purple_700"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/response"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:textColor="@color/white"
        android:textSize="12sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <CheckBox
            android:id="@+id/sparePartsStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.4"
            android:text="@string/sparePartsStatus"
            android:textColor="@color/purple_700"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/spareParts"
            android:textColor="@color/purple_700"
            android:visibility="gone" />

        <EditText
            android:id="@+id/spareParts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="enter spare parts"
            android:textColor="@color/white"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/done"
            android:textColor="@color/purple_700"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/undone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/undone"
            android:textColor="@color/purple_700"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/DocumentLinks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button55"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/approve_btns"
            android:text="@string/addFile"
            android:textAllCaps="false" />
    </LinearLayout>

</LinearLayout>