<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView113"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/searchBy"
            android:textColor="@color/purple_700" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/modelNumber"
                android:textColor="@color/purple_700" />

            <RadioButton
                android:id="@+id/radioButton6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/itemName"
                android:textColor="@color/purple_700" />
        </LinearLayout>

        <EditText
            android:id="@+id/editTextTextPersonName11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/enterSearchWord"
            android:inputType="textPersonName"
            android:textColor="@color/purple_700"
            android:textColorHint="@color/lightGray" />

        <ProgressBar
            android:id="@+id/progressBar7"
            style="?android:attr/progressBarStyle"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:padding="2dp">

        <TextView
            android:id="@+id/textView114"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/searchResult"
            android:textColor="@color/purple_700" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/Res_items"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/textView1144"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/purple_700" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:padding="2dp">

        <Button
            android:id="@+id/button57"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:background="@drawable/mainpage_btns"
            android:text="@string/cancel"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/button56"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:background="@drawable/btns"
            android:text="@string/select"
            android:textAllCaps="false" />
    </LinearLayout>
</LinearLayout>